feat: add in-person and VCS attendance modes
